[project]
name = "mapdn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7, <3.8"
dependencies = [
    "absl-py==0.10.0",
    "argon2-cffi==20.1.0",
    "astor==0.8.1",
    "astunparse==1.6.3",
    "async-generator==1.10",
    "attrs==20.2.0",
    "backcall==0.2.0",
    "backports-functools-lru-cache==1.6.1",
    "bleach==3.2.1",
    "brotlipy==0.7.0",
    "cachetools==4.1.1",
    "certifi==2020.6.20",
    "cffi==1.14.3",
    "chardet==3.0.4",
    "cloudpickle==1.2.2",
    "colorama==0.4.4",
    "commonmark==0.5.4",
    "crc32c==2.2",
    "cryptography==3.1.1",
    "cycler==0.10.0",
    "dataclasses==0.6",
    "decorator==4.4.2",
    "defusedxml==0.6.0",
    "docopt==0.6.2",
    "docutils==0.16",
    "entrypoints==0.3",
    "et-xmlfile==1.1.0",
    "flatbuffers==1.12",
    "gast==0.2.2",
    "gitdb==4.0.7",
    "gitpython==3.1.14",
    "google-auth==1.22.1",
    "google-auth-oauthlib==0.4.1",
    "google-pasta==0.2.0",
    "grpcio==1.32.0",
    "h5py==2.10.0",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "idna==2.10",
    "importlib-metadata==2.0.0",
    "ipykernel==5.3.4",
    "ipython==7.18.1",
    "ipython-genutils==0.2.0",
    "jedi==0.17.2",
    "jinja2==2.11.2",
    "joblib==0.17.0",
    "json5==0.9.5",
    "jsonpickle==1.5.2",
    "jsonschema==3.2.0",
    "jupyter-client==6.1.7",
    "jupyter-core==4.6.3",
    "jupyterlab==2.2.8",
    "jupyterlab-pygments==0.1.2",
    "jupyterlab-server==1.2.0",
    "kaleido==0.2.1",
    "keras-applications==1.0.8",
    "keras-preprocessing==1.1.2",
    "kiwisolver==1.2.0",
    "llvmlite==0.34.0",
    "markdown==3.3.2",
    "markupsafe==1.1.1",
    "matplotlib==2.2.5",
    "metakernel==0.27.0",
    "mistune==0.8.4",
    "mkl-fft==1.2.0",
    "mkl-random==1.2.0",
    "mkl-service==2.3.0",
    # "mpi4py==3.0.3",
    "munch==2.5.0",
    "nbclient==0.5.1",
    "nbconvert==6.0.7",
    "nbformat==5.0.8",
    "nest-asyncio==1.4.1",
    "networkx==2.5",
    "notebook==6.1.4",
    "numba==0.51.2",
    "numpy==1.19.5",
    "numpy-stl==2.16.0",
    "oauthlib==3.1.0",
    "oct2py==4.0.6",
    "octave-kernel==0.32.0",
    "omegaconf>=2.3.0",
    "opencv-python==4.4.0.46",
    "openpyxl==3.0.7",
    "opt-einsum==3.3.0",
    "packaging==20.4",
    "pandapower==2.7.0",
    "pandas==1.1.3",
    "pandocfilters==1.4.2",
    "parso==0.7.1",
    "pexpect==4.8.0",
    "pickleshare==0.7.5",
    "pillow==8.0.1",
    "pip==21.2.4",
    "plotly==5.3.1",
    "prometheus-client==0.8.0",
    "prompt-toolkit==3.0.8",
    "protobuf==3.13.0",
    "ptyprocess==0.6.0",
    "py-cpuinfo==8.0.0",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pycparser==2.20",
    "pygame==1.9.6",
    "pyglet==2.0.dev0",
    "pygments==2.7.1",
    "pyopenssl==19.1.0",
    "pyparsing==3.0.0a2",
    "pypower==5.1.4",
    "pyrsistent==0.17.3",
    "pysocks==1.7.1",
    "python-dateutil==2.8.1",
    "python-igraph==0.9.6",
    "python-utils==2.5.6",
    "pytz==2020.1",
    "pyyaml==6.0.1",
    "pyzmq==19.0.2",
    "recommonmark==0.4.0",
    "requests==2.24.0",
    "requests-oauthlib==1.3.0",
    "rich>=0.3.3",
    "rsa==4.6",
    "ruff>=0.7.3",
    "sacred==0.8.2",
    "scipy==1.4.1",
    "send2trash==1.5.0",
    "setuptools==50.3.2",
    "simplegeneric==0.8.1",
    "six==1.15.0",
    "smmap==4.0.0",
    "soundfile==0.10.3.post1",
    "tenacity==8.0.1",
    "tensorboard==2.1.1",
    "tensorboard-data-server==0.6.0",
    "tensorboard-plugin-wit==1.7.0",
    "tensorboardx==2.2",
    "tensorflow==2.1.0",
    "tensorflow-estimator==2.1.0",
    "termcolor==1.1.0",
    "terminado==0.9.1",
    "testpath==0.4.4",
    "texttable==1.6.4",
    "torch==1.10.0+cu113",
    # "torchvision==0.11.1+cu113",
    "tornado==6.1b1",
    "traitlets==5.0.5",
    "typing-extensions==3.7.4.3",
    "urllib3==1.25.11",
    "wandb>=0.13.5",
    "wcwidth==0.2.5",
    "webencodings==0.5.1",
    "werkzeug==1.0.1",
    "wheel==0.35.1",
    "wrapt==1.12.1",
    "xlrd==1.2.0",
    "xlsxwriter==1.3.7",
    "zipp==3.3.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "cstcloud"
url = "https://pypi.cstcloud.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl"
explicit = true
